Setting selectedIndex to an out-of-bounds value should have the same effect as setting it to -1.  b=471741 r+sr=roc